# NIA

./: .env.example  .gitignore  ATTRIBUTIONS.md  KNOWLEDGE_MAP.json  hub.html  lightweight_test.py  minimal_requirements.txt  next.config.js  package-lock.json  package.json  pyproject.toml  quick_boot.py  requirements.txt  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/hub/: page.tsx
app/legal/: HowTo.md  PrivacyPolicy.md  Terms.md
app/memory/: page.tsx
app/personalization/: page.tsx
app/pricing/: page.tsx
app/security/: page.tsx
app/settings/: page.tsx
components/: LandingPortal.tsx  ProactiveHub.tsx  SoulStatus.tsx  SovereignOrb.tsx
components/hub/: AIInput.css  AIInput.tsx  AgentConsole.tsx  ChatInterface.tsx  CommandBar.tsx  NiaPresence.tsx  SovereignMemory.tsx  SovereignOrb.tsx  SovereignSidebar.tsx  SystemHUD.tsx  VisionStream.tsx
components/layouts/: InnerLayout.tsx
components/ui/: sidebar.tsx
core/action/: action_engine.py
core/agent/: .dockerignore  .env.example  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_v0.10.0.md  RELEASE_v0.11.0.md  cli.py  (+33 more)
data/: instruction_tuning.jsonl  micro_sovereign.jsonl  sovereign_identity.jsonl
docs/: BENCHMARK_RESULTS.json  COMPLETION_REPORT.md  LIMITS_AND_RULES.md  PROJECT_GUIDE.md  README_OLD.md  REPRODUCIBILITY_CHECKLIST.md  SOVEREIGN_CODEX_V18.md  TECHNICAL_ARCHITECTURE.md  TECHNICAL_SPEC_V1.md  Tutorial.md  VISION_AND_PRD.md
legal/: PrivacyPolicy.md  UserAgreement.md
lib/: supabaseClient.ts  supabaseSettings.ts
supabase/: schema.sql
(+1716 files in other folders)
